baculum: New features and improvements to multi-user interface and restricted access
Implement the following functions on security page:
 - Console ACLs
 - OAuth2 clients
 - API hosts
